test/invalid/character_unfinished.d
//T error: character_unfinished.d:4:9:
//T error: Expected `'` to end charatcter literal, not '\n'.

char c = '\0
